[gd_scene load_steps=2 format=3 uid="uid://dg2fybmcerjwn"]

[ext_resource type="Script" path="res://addons/gdexplore/editor/finder.gd" id="1_gl3xy"]

[node name="Finder" type="AcceptDialog"]
title = "资源管理器"
position = Vector2i(0, 36)
size = Vector2i(1243, 600)
transient = false
exclusive = false
script = ExtResource("1_gl3xy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Images" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Images"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Images/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="PaginationContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Images"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/TabContainer/Images/PaginationContainer"]
layout_mode = 2
text = "Previous"

[node name="PageLabel" type="Label" parent="VBoxContainer/TabContainer/Images/PaginationContainer"]
layout_mode = 2
text = "Page 1/450"

[node name="NextButton" type="Button" parent="VBoxContainer/TabContainer/Images/PaginationContainer"]
layout_mode = 2
text = "Next"

[node name="Hud" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Hud"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Hud/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="PaginationContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Hud"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/TabContainer/Hud/PaginationContainer"]
layout_mode = 2
text = "Previous"

[node name="PageLabel" type="Label" parent="VBoxContainer/TabContainer/Hud/PaginationContainer"]
layout_mode = 2
text = "Page 1/37"

[node name="NextButton" type="Button" parent="VBoxContainer/TabContainer/Hud/PaginationContainer"]
layout_mode = 2
text = "Next"

[node name="Audio" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Audio"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Audio/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaginationContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/TabContainer/Audio/PaginationContainer"]
layout_mode = 2
text = "Previous"

[node name="PageLabel" type="Label" parent="VBoxContainer/TabContainer/Audio/PaginationContainer"]
layout_mode = 2
text = "Page 1/25"

[node name="NextButton" type="Button" parent="VBoxContainer/TabContainer/Audio/PaginationContainer"]
layout_mode = 2
text = "Next"

[node name="Bgm" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Bgm"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Bgm/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaginationContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Bgm"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/TabContainer/Bgm/PaginationContainer"]
layout_mode = 2
text = "Previous"

[node name="PageLabel" type="Label" parent="VBoxContainer/TabContainer/Bgm/PaginationContainer"]
layout_mode = 2
text = "Page 1/2"

[node name="NextButton" type="Button" parent="VBoxContainer/TabContainer/Bgm/PaginationContainer"]
layout_mode = 2
text = "Next"

[node name="Icons" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="FolderButtons" type="HBoxContainer" parent="VBoxContainer/TabContainer/Icons"]
layout_mode = 2
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Icons"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Icons/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="PaginationContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Icons"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/TabContainer/Icons/PaginationContainer"]
layout_mode = 2
text = "Previous"

[node name="PageLabel" type="Label" parent="VBoxContainer/TabContainer/Icons/PaginationContainer"]
layout_mode = 2
text = "Page 1/2"

[node name="NextButton" type="Button" parent="VBoxContainer/TabContainer/Icons/PaginationContainer"]
layout_mode = 2
text = "Next"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm Delete"
size = Vector2i(331, 100)
ok_button_text = "Delete"
dialog_text = "Are you sure you want to delete this file?"

[connection signal="pressed" from="VBoxContainer/TabContainer/Images/PaginationContainer/PrevButton" to="." method="_on_prev_sprite_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Images/PaginationContainer/NextButton" to="." method="_on_next_sprite_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Hud/PaginationContainer/PrevButton" to="." method="_on_prev_hud_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Hud/PaginationContainer/NextButton" to="." method="_on_next_hud_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Audio/PaginationContainer/PrevButton" to="." method="_on_prev_audio_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Audio/PaginationContainer/NextButton" to="." method="_on_next_audio_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Bgm/PaginationContainer/PrevButton" to="." method="_on_prev_bgm_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Bgm/PaginationContainer/NextButton" to="." method="_on_next_bgm_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Icons/PaginationContainer/PrevButton" to="." method="_on_prev_icon_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Icons/PaginationContainer/NextButton" to="." method="_on_next_icon_page_pressed"]
